# crewai-tets

job_applications/: README.md  fake_resume.md  interview_materials.md  pyproject.toml  tailored_resume.md
job_applications/db/: chroma.sqlite3
job_applications/src/job_applications/: crew.py  main.py
latest_ai_development/: report.md
latest_ai_development/src/latest_ai_development/: main.py
latest_ai_development/src/latest_ai_development/config/: agents.yaml
